# pi

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.e2e  Dockerfile.ts-parity  EXPORT_HTML_FOLLOWUP.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: build-binaries.yml  ci.yml  ts-parity-drift.yml
cmd/pi/: main.go  main_test.go
cmd/pi-tui-demo/: main.go
crates/pi-ai/: Cargo.toml
crates/pi-cli/: Cargo.toml
crates/pi-cli/src/: main.rs
crates/pi-cli/tests/: cli.rs
crates/pi-config/: Cargo.toml
crates/pi-core/: Cargo.toml
crates/pi-core/src/: lib.rs
crates/pi-tools/: Cargo.toml
crates/pi-tui/: Cargo.toml
docs/: REWRITE_GAP.md
docs/rust-rewrite/: architecture.md  inventory.md
internal/agent/: agent.go  agent_test.go  auth.go  event.go  loop.go  loop_test.go  tool.go  tree.go  tree_test.go  types.go  types_test.go  validation.go  validation_test.go
internal/anthropic/: auth.go  auth_test.go  client.go  client_test.go  sse.go  tool_names.go  transform.go  transform_test.go
internal/auth/: oauth.go  oauth_test.go  store.go  store_test.go
internal/benchmarks/: bench_test.go
internal/cli/: args.go  args_test.go
internal/compaction/: compactor.go  compactor_test.go  cutpoint.go  cutpoint_test.go  estimator.go  estimator_test.go  fileops.go  fileops_test.go  serialize.go  session_integration.go  session_integration_test.go
internal/config/: atomic.go  paths.go  paths_test.go  settings.go  settings_test.go
internal/diagnostics/: collector.go  collector_test.go
internal/exporter/: jsonl.go  jsonl_test.go
internal/models/: defaults.json  provider_display_names.go  registry.go  registry_test.go
internal/observability/: logger.go  logger_test.go
internal/resources/: frontmatter.go  frontmatter_test.go  loader.go  loader_test.go  prompt_template.go  prompt_template_test.go  system_prompt.go  system_prompt_test.go  types.go
internal/session/: jsonl.go  jsonl_test.go  message_payload.go  record.go  restore.go  session.go  session_test.go  stdout_writer.go  tree.go  tree_test.go  writer_adapter.go
internal/timings/: timings.go  timings_test.go
internal/tools/: details.go  registry.go  registry_test.go
internal/tui/: app.go  app_test.go  keys.go  theme.go
internal/version/: check.go  (+1 more)
scripts/: check-perf.sh  dogfood-long-tty.sh  dogfood-real-tty.sh  dogfood-release.sh  e2e-tmux.sh  install-build.sh  smoke-claude-opus-oauth.sh  ts-parity-drift.sh
(+113 files in other folders)
