[workspace]
members = [
    "crates/pi-ai",
    "crates/pi-cli",
    "crates/pi-config",
    "crates/pi-core",
    "crates/pi-tools",
    "crates/pi-tui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.83"
clap = { version = "4.5.38", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "process", "rt-multi-thread", "time"] }
