[package]
name = "pi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "pi"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
pi-ai = { path = "../pi-ai" }
pi-config = { path = "../pi-config" }
pi-core = { path = "../pi-core" }
pi-tui = { path = "../pi-tui" }
serde_json.workspace = true
tokio.workspace = true
